# ThreadManager

./: .cproject  .gitignore  .project  AnyJob.hpp  CMakeLists.txt  FirstJob.cpp  FirstJob.hpp  README.md  SecondJob.cpp  SecondJob.hpp  TaskThread.cpp  TaskThread.hpp  ThreadManager.cpp  ThreadManager.hpp  ThreadState.hpp  main.cpp
.github/workflows/: cmake.yml
tests/: CMakeLists.txt  TaskThread_test.cpp  ThreadManager_test.cpp  unit_tests.h
tests/TaskThreadTest/: CMakeLists.txt  TaskThreadTest.cpp
tests/ThreadManagerTest/: CMakeLists.txt  ThreadManagerTest.cpp
